Fixing About Component and realign with repo

--- a/public/css/custom/layout.scss
+++ b/public/css/custom/layout.scss
@@ -168,7 +168,7 @@ footer {
   .nav>li>a {
     position: relative;
     display: block;
-    padding: 10px 15px;}
+    padding: 5px 15px;}
   .tab-content > .active{
     background-color: #fff;
     padding: 10px;
@@ -185,4 +185,9 @@ footer {
   }
   .navabout ul {
     display: block;
+  }
+  textarea#styled {
+    width: 100%;
+    height: 300px;
+    border: none;
   }
